# smartfleet

./: .env.example  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/drivers/: page.tsx
app/events/: page.tsx
app/fuel/: page.tsx
app/history/: page.tsx
app/monitoring/: page.tsx
app/reports/: page.tsx
app/routes/: page.tsx
app/settings/: page.tsx
app/trackers/: page.tsx
app/vehicles/: page.tsx
components/layout/: app-shell.tsx  cards.tsx
components/monitoring/: app-sidebar.tsx  map-view.tsx  monitoring-screen.tsx  status-bar.tsx  theme-toggle.tsx  top-toolbar.tsx  vehicle-detail-card.tsx  vehicle-list-panel.tsx
docs/: architecture.md  deploy.md  frontend-original-readme.md
hooks/: use-fleet.ts
lib/: api.ts  format.ts  mock-data.ts  types.ts
src/smartfleet/: __init__.py  config.py
src/smartfleet/api/: main.py
src/smartfleet/db/: models.py  session.py
src/smartfleet/protocols/: __init__.py  quicklink.py  teltonika.py
src/smartfleet/services/: telemetry.py
src/smartfleet/tcp/: __init__.py  server.py
tests/: test_persistence.py  test_teltonika.py
